force-app/main/default/objects/Train__c/Train__c.object-meta.xml
<CustomObject>
    <label>Train</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Train Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>