force-app/main/default/objects/Train__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival_Time</label>
    <type>Time</type>
</CustomField>