force-app/main/default/objects/Train__c/fields/Average_Speed__c.field-meta.xml
<CustomField>
    <fullName>Average_Speed__c</fullName>
    <label>Average_Speed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>