force-app/main/default/objects/Train__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <label>Departure_Time</label>
    <type>Time</type>
</CustomField>