force-app/main/default/objects/Train__c/fields/Destination_Station__c.field-meta.xml
<CustomField>
    <fullName>Destination_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination_Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Trains (Destination_Station)</relationshipLabel>
    <relationshipName>Trains1</relationshipName>
    <type>Lookup</type>
</CustomField>