force-app/main/default/objects/Train__c/fields/Journey_Duration__c.field-meta.xml
<CustomField>
    <fullName>Journey_Duration__c</fullName>
    <label>Journey_Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>