force-app/main/default/objects/Train__c/fields/Source_Station__c.field-meta.xml
<CustomField>
    <fullName>Source_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source_Station</label>
    <referenceTo>Station__c</referenceTo>
    <relationshipLabel>Trains (Source_Station)</relationshipLabel>
    <relationshipName>Trains</relationshipName>
    <type>Lookup</type>
</CustomField>