force-app/main/default/objects/Train__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <label>Total_Distance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>