force-app/main/default/objects/Train__c/fields/Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Train_Number__c</fullName>
    <externalId>true</externalId>
    <label>Train_Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>