force-app/main/default/objects/Train__c/fields/Train_Type__c.field-meta.xml
<CustomField>
    <fullName>Train_Type__c</fullName>
    <label>Train_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Superfast</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Shatabdi</fullName>
            </value>
            <value>
                <fullName>Rajdhani</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>